cloudformation-output.json
{
    "Mappings": {
        "RegionMap": {
            "eu-west-1": {
                "AMI": "ami-892fe1fe"
            }, 
            "us-east-1": {
                "AMI": "ami-76817c1e"
            }, 
            "us-west-1": {
                "AMI": "ami-f0d3d4b5"
            }, 
            "us-west-2": {
                "AMI": "ami-d13845e1"
            }
        }
    }, 
    "Outputs": {
        "InstanceId": {
            "Description": "InstanceId of the newly created EC2 instance", 
            "Value": {
                "Ref": "EC2Instance"
            }
        }
    }, 
    "Parameters": {
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance", 
            "Type": "String"
        }, 
        "SSHLocation": {
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})", 
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.", 
            "Default": "0.0.0.0/0", 
            "Description": "The IP address range that can be used to SSH to the EC2 instances", 
            "MaxLength": "18", 
            "MinLength": "9", 
            "Type": "String"
        }, 
        "SubnetId": {
            "Description": "SubnetId of an existing subnet (for the primary network) in your Virtual Private Cloud (VPC)access to the instance", 
            "Type": "String"
        }, 
        "VpcId": {
            "Description": "VpcId of your existing Virtual Private Cloud (VPC)", 
            "Type": "String"
        }
    }, 
    "Resources": {
        "EC2Instance": {
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionMap", 
                        {
                            "Ref": "AWS::Region"
                        }, 
                        "AMI"
                    ]
                }, 
                "InstanceType": "t2.micro", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "PrivateIpAddress": "10.0.0.55", 
                "SecurityGroupIds": [
                    {
                        "Ref": "ZooKeeperSecurityGroup"
                    }
                ], 
                "SubnetId": {
                    "Ref": "SubnetId"
                }, 
                "Tags": [
                    {
                        "Key": "Name", 
                        "Value": "ZooKeeper Instance 1"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "KafkaSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enable SSH, Kafka access via ports 22, bla bla bla", 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }
                ], 
                "VpcId": {
                    "Ref": "VpcId"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "SecurityGroupIngress1": {
            "Properties": {
                "FromPort": "2888", 
                "GroupId": {
                    "Ref": "ZooKeeperSecurityGroup"
                }, 
                "IpProtocol": "tcp", 
                "SourceSecurityGroupId": {
                    "Ref": "ZooKeeperSecurityGroup"
                }, 
                "ToPort": "2888"
            }, 
            "Type": "AWS::EC2::SecurityGroupIngress"
        }, 
        "SecurityGroupIngress2": {
            "Properties": {
                "FromPort": "3888", 
                "GroupId": {
                    "Ref": "ZooKeeperSecurityGroup"
                }, 
                "IpProtocol": "tcp", 
                "SourceSecurityGroupId": {
                    "Ref": "ZooKeeperSecurityGroup"
                }, 
                "ToPort": "3888"
            }, 
            "Type": "AWS::EC2::SecurityGroupIngress"
        }, 
        "SecurityGroupIngress3": {
            "Properties": {
                "FromPort": "2181", 
                "GroupId": {
                    "Ref": "ZooKeeperSecurityGroup"
                }, 
                "IpProtocol": "tcp", 
                "SourceSecurityGroupId": {
                    "Ref": "KafkaSecurityGroup"
                }, 
                "ToPort": "2181"
            }, 
            "Type": "AWS::EC2::SecurityGroupIngress"
        }, 
        "ZooKeeperSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enable SSH, ZooKeeper access via ports 22, 2888, 3888, and 2181", 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }
                ], 
                "VpcId": {
                    "Ref": "VpcId"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }
    }
}
